--- a/_posts/2013-01-24-hello-world.html
+++ b/_posts/2013-01-24-hello-world.html
@@ -1,7 +1,7 @@
 ---
 layout:default
-title:ä½ å¥½ï¼Œä¸–ç•Œ
+title:ÎÒµÄµÚÒ»ÆªÕÂ
 ---
 <h2>{{page.title}}</h2>
-<p>æˆ‘çš„ç¬¬ä¸€ç¯‡ç« </p>
+<p>´ó¼Ò¿´¿´°¡</p>
 <p>{{page.date | date_to_string }}</p>
