--- a/_posts/2013-01-24-hello-world.html
+++ b/_posts/2013-01-24-hello-world.html
@@ -1,7 +1,7 @@
 ---
 layout:default
-title:ÎÒµÄµÚÒ»ÆªÕÂ
+title:æˆ‘çš„ç¬¬ä¸€ç¯‡ç« 
 ---
 <h2>{{page.title}}</h2>
-<p>´ó¼Ò¿´¿´°¡</p>
+<p>å¤§å®¶çœ‹çœ‹å•Š</p>
 <p>{{page.date | date_to_string }}</p>
