--- a/_posts/2013-01-24-hello-world.html
+++ b/_posts/2013-01-24-hello-world.html
@@ -1,7 +1,7 @@
 ---
 layout:default
-title:我的第一篇章
+title:OK my first article
 ---
 <h2>{{page.title}}</h2>
-<p>大家看看啊</p>
+<p>wwwwwwwww</p>
 <p>{{page.date | date_to_string }}</p>
