--- a/_posts/2013-01-24-hello-world.html
+++ b/_posts/2013-01-24-hello-world.html
@@ -1,7 +1,7 @@
 ---
 layout:default
-title:OK my first article
+title:Oooooooo
 ---
 <h2>{{page.title}}</h2>
-<p>wwwwwwwww</p>
+<p>wwwwwwwddww</p>
 <p>{{page.date | date_to_string }}</p>
